changed first name

--- a/config.toml
+++ b/config.toml
@@ -16,7 +16,7 @@ URL = "s3://cloud4z2.com/?region=us-east-1"
 address = "Tallahasse, FL"
 email = "zionette@cloud4z2.awsapps.com"
 favicon = "/favicon.ico"
-firstName = "Zionette"
+firstName = "Shannon"
 lastName = "Cleek"
 phone = "1-850-324-6742"
 profileImage = "img/IMG_2972.jpeg"
