--- a/themes/hugo-resume/static/admin/config.yml
+++ b/themes/hugo-resume/static/admin/config.yml
@@ -64,8 +64,8 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "Sitemap", name: "sitemap", widget: "object", field: {label: weight, name: weight, widget: "number", valueType: float, step: 0.1, min: 0.0, max: 1.0}}
       - {label: "Body", name: "body", widget: "markdown"}
 
-  - name: "Publications" # Used in routes, ie.: /admin/collections/:slug/edit
-    label: "Publications" # Used in the UI, ie.: "New Post"
+  - name: "Certifications" # Used in routes, ie.: /admin/collections/:slug/edit
+    label: "Certifications" # Used in the UI, ie.: "New Post"
     folder: "exampleSite/content/publications" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     fields: # The fields each document in this collection have
@@ -120,7 +120,7 @@ collections: # A list of collections the CMS should be able to edit
               - { label: 'showSkills', name: 'showSkills', widget: 'boolean', required: false }
               - { label: 'showProjects', name: 'showProjects', widget: 'boolean', required: false }
               - { label: 'showOpenSource', name: 'showOpenSource', widget: 'boolean', required: false }
-              - { label: 'showPublications', name: 'showPublications', widget: 'boolean', required: false }
+              - { label: 'showCertifications', name: 'showCertifications', widget: 'boolean', required: false }
               - { label: 'showExperience', name: 'showExperience', widget: 'boolean', required: false }
               - { label: 'showEducation', name: 'showEducation', widget: 'boolean', required: false }
               - { label: 'showQr', name: 'showQr', widget: 'boolean', required: false }
